courses page edit
all color and text desing chenge

--- a/views/user/class&courses.ejs
+++ b/views/user/class&courses.ejs
@@ -350,7 +350,7 @@
   <!-- Hero Header -->
   <section class="hero-header">
     <div class="container">
-      <h1>(CLASS) & COURSES </h1>
+      <h1>CLASS & COURSES </h1>
       <p></p>
     </div>
   </section>
@@ -374,7 +374,7 @@
               <li>English – Grammar, Reading comprehension, Writing</li>
               <li>Social Studies – Geography, Indian history, Civics</li>
             </ul>
-            <a href="/class" class="btn">Explore Class 5 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class5" class="btn">Explore Class 5 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -392,7 +392,7 @@
               <li>English – Writing skills, Vocabulary, Literature</li>
               <li>Social Studies – Ancient civilizations, Maps, Culture</li>
             </ul>
-            <a href="#class6" class="btn">Explore Class 6 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class6" class="btn">Explore Class 6 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -410,7 +410,7 @@
               <li>English – Literature analysis, Writing skills</li>
               <li>Social Studies – Medieval India, Modern world</li>
             </ul>
-            <a href="#class7" class="btn">Explore Class 7 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class7" class="btn">Explore Class 7 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -428,7 +428,7 @@
               <li>English – Comprehension, Essay writing, Grammar</li>
               <li>Social Studies – Modern India, Civics, Economics</li>
             </ul>
-            <a href="#class8" class="btn">Explore Class 8 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class8" class="btn">Explore Class 8 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -446,7 +446,7 @@
               <li>English – Literature, Grammar, Writing skills</li>
               <li>Social Studies – India & contemporary world I</li>
             </ul>
-            <a href="#class9" class="btn">Explore Class 9 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class9" class="btn">Explore Class 9 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
@@ -464,7 +464,7 @@
               <li>English – Reading, Writing, Literature analysis</li>
               <li>Social Studies – Contemporary India, Economics</li>
             </ul>
-            <a href="#class10" class="btn">Explore Class 10 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class10" class="btn">Explore Class 10 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
