--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -21,7 +21,7 @@
       <!-- Logo -->
       <div class="logo d-flex align-items-center">
         <a href="/" aria-label="Home" class="d-flex align-items-center text-decoration-none">
-          <img src="/Aniket2.png" alt="Logo" class="logo-img" style="height: 50px; margin-right:-17px;margin-left:-50px;">
+          <img src="/Aniket2.png" alt="Logo" class="logo-img" style="height: 50px; margin-right:-17px;margin-left:-30px;">
           <span class="gradient-text fw-bold">Classes</span>
         </a>
       </div>
@@ -34,7 +34,7 @@
       </div>
 
       <!-- Navigation Links -->
-      <ul class="nav-links list-unstyled d-lg-flex gap-4 mb-0 align-items-center" id="nav-links">
+      <ul class="nav-links list-unstyled d-lg-flex gap-4 mb-0 align-items-center" id="nav-links"style="margin-right: 50px;">
         <li><a href="/" class="nav-link" data-page="home">Home</a></li>
         <li><a href="/about" class="nav-link" data-page="about">About</a></li>
         <li><a href="/courses" class="nav-link" data-page="courses">Class & Courses</a></li>
