--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -566,7 +566,7 @@ section { padding: 80px 0; }
                             <li><i class="fas fa-check-circle"></i> Social Studies Projects</li>
                             <li><i class="fas fa-check-circle"></i> Creative Writing</li>
                         </ul>
-                        <a href="/courses" class="class-btn">Explore Class</a>
+                        <a href="" class="class-btn">Explore Class</a>
                     </div>
                 </div>
                 
@@ -583,7 +583,7 @@ section { padding: 80px 0; }
                             <li><i class="fas fa-check-circle"></i> History & Geography</li>
                             <li><i class="fas fa-check-circle"></i> Language Development</li>
                         </ul>
-                        <a href="/courses" class="class-btn">Explore Class</a>
+                        <a href="#" class="class-btn">Explore Class</a>
                     </div>
                 </div>
                 
@@ -600,7 +600,7 @@ section { padding: 80px 0; }
                             <li><i class="fas fa-check-circle"></i> Comprehensive Language</li>
                             <li><i class="fas fa-check-circle"></i> Career Guidance</li>
                         </ul>
-                        <a href="/courses" class="class-btn">Explore Class</a>
+                        <a href="#" class="class-btn">Explore Class</a>
                     </div>
                 </div>
                 <div class="class-card">
@@ -616,7 +616,7 @@ section { padding: 80px 0; }
                             <li><i class="fas fa-check-circle"></i> Comprehensive Language</li>
                             <li><i class="fas fa-check-circle"></i> Career Guidance</li>
                         </ul>
-                        <a href="/courses" class="class-btn">Explore Class</a>
+                        <a href="#" class="class-btn">Explore Class</a>
                     </div>
                 </div>
             </div>
