--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -43,7 +43,7 @@
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">Login</a>
           <ul class="dropdown-menu">
             <li><a href="/loginstudent" class="dropdown-item">Student</a></li>
-            <li><a href="/loginAdmin" class="dropdown-item">Admin</a></li>
+            <li><a href="/loginadmin" class="dropdown-item">Admin</a></li>
           </ul>
         </li>
       </ul>
